imt_ll/tp3/sujet/y.output
Grammar

    0 $accept: sequence $end

    1 sequence: instruction RETURN sequence
    2         | RETURN
    3         | ERROR

    4 instruction: expr

    5 expr: expr PLUS terme
    6     | expr MOINS terme
    7     | terme

    8 terme: terme FOIS facteur
    9      | terme DIV facteur
   10      | facteur

   11 facteur: PAROU expr PARFER
   12        | Nombre


Terminals, with rules where they appear

$end (0) 0
error (256)
ERROR (258) 3
RETURN (259) 1 2
Nombre (260) 12
FOIS (261) 8
DIV (262) 9
PLUS (263) 5
MOINS (264) 6
PAROU (265) 11
PARFER (266) 11


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
sequence (13)
    on left: 1 2 3, on right: 0 1
instruction (14)
    on left: 4, on right: 1
expr (15)
    on left: 5 6 7, on right: 4 5 6 11
terme (16)
    on left: 8 9 10, on right: 5 6 7 8 9
facteur (17)
    on left: 11 12, on right: 8 9 10


State 0

    0 $accept: . sequence $end

    ERROR   shift, and go to state 1
    RETURN  shift, and go to state 2
    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    sequence     go to state 5
    instruction  go to state 6
    expr         go to state 7
    terme        go to state 8
    facteur      go to state 9


State 1

    3 sequence: ERROR .

    $default  reduce using rule 3 (sequence)


State 2

    2 sequence: RETURN .

    $default  reduce using rule 2 (sequence)


State 3

   12 facteur: Nombre .

    $default  reduce using rule 12 (facteur)


State 4

   11 facteur: PAROU . expr PARFER

    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    expr     go to state 10
    terme    go to state 8
    facteur  go to state 9


State 5

    0 $accept: sequence . $end

    $end  shift, and go to state 11


State 6

    1 sequence: instruction . RETURN sequence

    RETURN  shift, and go to state 12


State 7

    4 instruction: expr .
    5 expr: expr . PLUS terme
    6     | expr . MOINS terme

    PLUS   shift, and go to state 13
    MOINS  shift, and go to state 14

    $default  reduce using rule 4 (instruction)


State 8

    7 expr: terme .
    8 terme: terme . FOIS facteur
    9      | terme . DIV facteur

    FOIS  shift, and go to state 15
    DIV   shift, and go to state 16

    $default  reduce using rule 7 (expr)


State 9

   10 terme: facteur .

    $default  reduce using rule 10 (terme)


State 10

    5 expr: expr . PLUS terme
    6     | expr . MOINS terme
   11 facteur: PAROU expr . PARFER

    PLUS    shift, and go to state 13
    MOINS   shift, and go to state 14
    PARFER  shift, and go to state 17


State 11

    0 $accept: sequence $end .

    $default  accept


State 12

    1 sequence: instruction RETURN . sequence

    ERROR   shift, and go to state 1
    RETURN  shift, and go to state 2
    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    sequence     go to state 18
    instruction  go to state 6
    expr         go to state 7
    terme        go to state 8
    facteur      go to state 9


State 13

    5 expr: expr PLUS . terme

    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    terme    go to state 19
    facteur  go to state 9


State 14

    6 expr: expr MOINS . terme

    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    terme    go to state 20
    facteur  go to state 9


State 15

    8 terme: terme FOIS . facteur

    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    facteur  go to state 21


State 16

    9 terme: terme DIV . facteur

    Nombre  shift, and go to state 3
    PAROU   shift, and go to state 4

    facteur  go to state 22


State 17

   11 facteur: PAROU expr PARFER .

    $default  reduce using rule 11 (facteur)


State 18

    1 sequence: instruction RETURN sequence .

    $default  reduce using rule 1 (sequence)


State 19

    5 expr: expr PLUS terme .
    8 terme: terme . FOIS facteur
    9      | terme . DIV facteur

    FOIS  shift, and go to state 15
    DIV   shift, and go to state 16

    $default  reduce using rule 5 (expr)


State 20

    6 expr: expr MOINS terme .
    8 terme: terme . FOIS facteur
    9      | terme . DIV facteur

    FOIS  shift, and go to state 15
    DIV   shift, and go to state 16

    $default  reduce using rule 6 (expr)


State 21

    8 terme: terme FOIS facteur .

    $default  reduce using rule 8 (terme)


State 22

    9 terme: terme DIV facteur .

    $default  reduce using rule 9 (terme)
